--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <h5><i class="fas fa-bolt me-2"></i>Excellence Electricals</h5>
+                    <h5><i class="fas fa-bolt me-2"></i>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
                     <p>Your trusted partner for all electrical needs. Licensed, insured, and committed to excellence in every project.</p>
                     <div class="social-links mt-3">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -678,16 +678,16 @@
                 </div>
                 <div class="col-lg-3 mb-4">
                     <h6>Contact Info</h6>
-                    <p><i class="fas fa-map-marker-alt me-2"></i>123 Electric Avenue, Nairobi</p>
+                    <p><i class="fas fa-map-marker-alt me-2"></i>P.O. Box 965-01000, THIKA</p>
                     <p><i class="fas fa-phone me-2"></i>+254 700 123 456</p>
-                    <p><i class="fas fa-envelope me-2"></i>info@excellenceelectricals.com</p>
+                    <p><i class="fas fa-envelope me-2"></i>blessedsam5320@gmail.com</p>
                     <p><i class="fas fa-clock me-2"></i>24/7 Emergency Service</p>
                 </div>
             </div>
             <hr>
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2025 Excellence Electricals. All rights reserved.</p>
+                    <p>&copy; 2025 BLESSEDSAM ELECTRICAL INSTALLATIONS. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-end">
                     <div class="footer-links">
