--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                         <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#testimonials">Testimonials</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#blog">Blog</a>
                     </li>
                     <li class="nav-item">
@@ -90,6 +87,172 @@
                         <h3 class="fw-bold text-primary">24/7</h3>
                         <p>Emergency Service</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About Us on Homepage -->
+        <section class="py-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 mb-4 mb-lg-0">
+                        <div class="section-title text-start">
+                            <h2>About BLESSEDSAM ELECTRICAL</h2>
+                            <p class="lead">Your trusted electrical experts since 2008</p>
+                        </div>
+                        <p>With over 15 years of experience, BLESSEDSAM ELECTRICAL INSTALLATIONS has been providing top-quality electrical services to homes and businesses in Thika and beyond. Our team of certified electricians is committed to excellence in every project we undertake.</p>
+                        <div class="row mt-4">
+                            <div class="col-md-6 mb-3">
+                                <div class="d-flex align-items-start">
+                                    <i class="fas fa-check-circle text-primary me-2 mt-1"></i>
+                                    <div>
+                                        <h6 class="mb-1">Licensed & Insured</h6>
+                                        <p class="small text-muted mb-0">Fully certified and insured for your peace of mind</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <div class="d-flex align-items-start">
+                                    <i class="fas fa-check-circle text-primary me-2 mt-1"></i>
+                                    <div>
+                                        <h6 class="mb-1">24/7 Emergency</h6>
+                                        <p class="small text-muted mb-0">Round-the-clock service when you need it most</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#about" class="btn btn-outline-primary mt-2">Learn More About Us</a>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="position-relative">
+                            <div class="about-img-1 rounded-4 overflow-hidden mb-3">
+                                <div class="gradient-bg-primary p-5 text-white text-center">
+                                    <i class="fas fa-tools icon-large mb-3"></i>
+                                    <h4 class="h5">Professional & Reliable</h4>
+                                    <p class="mb-0">Your satisfaction is our top priority</p>
+                                </div>
+                            </div>
+                            <div class="about-img-2 rounded-4 overflow-hidden">
+                                <div class="gradient-bg-secondary p-4 text-white text-center">
+                                    <div class="d-flex justify-content-around">
+                                        <div class="text-center px-2">
+                                            <h3 class="mb-0 fw-bold">15+</h3>
+                                            <small>Years Experience</small>
+                                        </div>
+                                        <div class="text-center px-2">
+                                            <h3 class="mb-0 fw-bold">500+</h3>
+                                            <small>Projects Completed</small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonials on Homepage -->
+        <section class="py-5">
+            <div class="container">
+                <div class="section-title text-center mb-5">
+                    <h2>What Our Customers Say</h2>
+                    <p class="lead">Don't just take our word for it</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 mb-4">
+                        <div class="testimonial-card h-100">
+                            <p class="mb-4">"Excellence Electricals did an amazing job rewiring our entire home. The team was professional, clean, and completed the work on time and within budget. Highly recommended!"</p>
+                            <div class="d-flex align-items-center mt-auto">
+                                <div class="testimonial-avatar me-3">
+                                    <div class="testimonial-avatar-container bg-primary rounded-circle d-flex justify-content-center align-items-center">
+                                        <i class="fas fa-user text-white"></i>
+                                    </div>
+                                </div>
+                                <div>
+                                    <h6 class="mb-0">Jennifer Smith</h6>
+                                    <small class="text-muted">Homeowner</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mb-4">
+                        <div class="testimonial-card h-100">
+                            <p class="mb-4">"We needed emergency electrical repair for our office building. They responded within an hour and had us back up and running the same day. Excellent service!"</p>
+                            <div class="d-flex align-items-center mt-auto">
+                                <div class="testimonial-avatar me-3">
+                                    <div class="testimonial-avatar-container bg-primary rounded-circle d-flex justify-content-center align-items-center">
+                                        <i class="fas fa-user text-white"></i>
+                                    </div>
+                                </div>
+                                <div>
+                                    <h6 class="mb-0">Michael Brown</h6>
+                                    <small class="text-muted">Business Owner</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mb-4">
+                        <div class="testimonial-card h-100">
+                            <p class="mb-4">"The solar installation was seamless and the team explained everything clearly. Our energy bills have dropped significantly. Professional work from start to finish."</p>
+                            <div class="d-flex align-items-center mt-auto">
+                                <div class="testimonial-avatar me-3">
+                                    <div class="testimonial-avatar-container bg-primary rounded-circle d-flex justify-content-center align-items-center">
+                                        <i class="fas fa-user text-white"></i>
+                                    </div>
+                                </div>
+                                <div>
+                                    <h6 class="mb-0">Lisa Davis</h6>
+                                    <small class="text-muted">Homeowner</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Services on Homepage -->
+        <section class="py-5 bg-light">
+            <div class="container">
+                <div class="section-title text-center mb-5">
+                    <h2>Our Electrical Services</h2>
+                    <p class="lead">Professional solutions for all your electrical needs</p>
+                </div>
+                <div class="row g-4">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="service-card h-100">
+                            <div class="service-icon">
+                                <i class="fas fa-home"></i>
+                            </div>
+                            <h4>Residential Electrical</h4>
+                            <p>Complete home wiring, lighting installations, panel upgrades, and electrical repairs for your home.</p>
+                            <a href="#services" class="btn btn-link p-0">Learn More <i class="fas fa-arrow-right ms-1"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="service-card h-100">
+                            <div class="service-icon">
+                                <i class="fas fa-building"></i>
+                            </div>
+                            <h4>Commercial Electrical</h4>
+                            <p>Professional electrical services for businesses, offices, and commercial properties of all sizes.</p>
+                            <a href="#services" class="btn btn-link p-0">Learn More <i class="fas fa-arrow-right ms-1"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="service-card h-100">
+                            <div class="service-icon">
+                                <i class="fas fa-tools"></i>
+                            </div>
+                            <h4>Emergency Repairs</h4>
+                            <p>24/7 emergency electrical services to handle any urgent electrical issues you may encounter.</p>
+                            <a href="#services" class="btn btn-link p-0">Learn More <i class="fas fa-arrow-right ms-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center mt-5">
+                    <a href="#services" class="btn btn-primary-custom">View All Services</a>
                 </div>
             </div>
         </section>
@@ -374,67 +537,6 @@
         </section>
     </div>
 
-    <!-- Testimonials Section -->
-    <div id="testimonials" class="page-section">
-        <section class="section-padding bg-light">
-            <div class="container">
-                <div class="section-title">
-                    <h2>What Our Customers Say</h2>
-                    <p class="lead">Don't just take our word for it</p>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4 mb-4">
-                        <div class="testimonial-card">
-                            <p class="mb-4">"Excellence Electricals did an amazing job rewiring our entire home. The team was professional, clean, and completed the work on time and within budget. Highly recommended!"</p>
-                            <div class="d-flex align-items-center">
-                                <div class="testimonial-avatar me-3">
-                                    <div class="testimonial-avatar-container bg-primary rounded-circle d-flex justify-content-center align-items-center">
-                                        <i class="fas fa-user text-white"></i>
-                                    </div>
-                                </div>
-                                <div>
-                                    <h6 class="mb-0">Jennifer Smith</h6>
-                                    <small class="text-muted">Homeowner</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 mb-4">
-                        <div class="testimonial-card">
-                            <p class="mb-4">"We needed emergency electrical repair for our office building. They responded within an hour and had us back up and running the same day. Excellent service!"</p>
-                            <div class="d-flex align-items-center">
-                                <div class="testimonial-avatar me-3">
-                                    <div class="testimonial-avatar-container bg-primary rounded-circle d-flex justify-content-center align-items-center">
-                                        <i class="fas fa-user text-white"></i>
-                                    </div>
-                                </div>
-                                <div>
-                                    <h6 class="mb-0">Michael Brown</h6>
-                                    <small class="text-muted">Business Owner</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 mb-4">
-                        <div class="testimonial-card">
-                            <p class="mb-4">"The solar installation was seamless and the team explained everything clearly. Our energy bills have dropped significantly. Professional work from start to finish."</p>
-                            <div class="d-flex align-items-center">
-                                <div class="testimonial-avatar me-3">
-                                    <div class="testimonial-avatar-container bg-primary rounded-circle d-flex justify-content-center align-items-center">
-                                        <i class="fas fa-user text-white"></i>
-                                    </div>
-                                </div>
-                                <div>
-                                    <h6 class="mb-0">Lisa Davis</h6>
-                                    <small class="text-muted">Homeowner</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
 
     <!-- Blog Section -->
     <div id="blog" class="page-section">
@@ -608,19 +710,6 @@
                                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
                                     <a href="#"><i class="fab fa-instagram"></i></a>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-                <!-- Map Section -->
-                <div class="row mt-5">
-                    <div class="col-12">
-                        <div class="map-container">
-                            <div class="text-center">
-                                <i class="fas fa-map-marked-alt icon-extra-large mb-3"></i>
-                                <h5>Interactive Map</h5>
-                                <p>Google Maps integration would be embedded here</p>
                             </div>
                         </div>
                     </div>
