--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </div>
                     <div class="col-lg-6 text-center">
                         <div class="hero-image">
-                            <i class="fas fa-plug icon-huge"></i>
+                            <img src="images/electric.png" alt="Hero Image" class="img-fluid">
                         </div>
                     </div>
                 </div>
