modidfied loading of js

--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://blessedsam-electrical.com/services.html" />
   <meta property="og:title" content="Electrical Services Kenya | Residential, Commercial & Emergency | BlessedSam" />
   <meta property="og:description" content="Professional electrical services in Kenya: residential wiring, commercial installations, emergency repairs, solar power, lighting & safety inspections. Licensed electricians serving Nairobi & Thika." />
-  <meta property="og:image" content="https://blessedsam-electrical.com/images/electrician.jpeg" />
+  <meta property="og:image" content="https://blessedsam-electrical.com/images/electrician.webp" />
   <meta property="og:locale" content="en_KE" />
   <meta property="og:site_name" content="BlessedSam Electrical Installations" />
   
@@ -26,7 +26,7 @@
   <meta property="twitter:url" content="https://blessedsam-electrical.com/services.html" />
   <meta property="twitter:title" content="Electrical Services Kenya | Residential, Commercial & Emergency | BlessedSam" />
   <meta property="twitter:description" content="Professional electrical services in Kenya: residential wiring, commercial installations, emergency repairs, solar power, lighting & safety inspections. Licensed electricians serving Nairobi & Thika." />
-  <meta property="twitter:image" content="https://blessedsam-electrical.com/images/electrician.jpeg" />
+  <meta property="twitter:image" content="https://blessedsam-electrical.com/images/electrician.webp" />
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -281,6 +281,6 @@
 
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-  <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 </html>
