--- a/index.html
+++ b/index.html
@@ -627,6 +627,6 @@
 
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-  <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 </html>
