--- a/blog.html
+++ b/blog.html
@@ -368,7 +368,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js" defer></script>
   <script>
     // Theme Switching Functionality
     const themeToggle = document.getElementById('themeToggle');
