electrical and sound system

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <!-- SEO Meta Tags -->
-  <title>Portfolio | Electrical Projects by BlessedSam | Nairobi, Thika & Central Kenya</title>
+  <title>Portfolio | BlessedSam Electrical Projects</title>
   <meta name="description" content="View our portfolio of completed electrical projects in Kenya: residential wiring in Nairobi, commercial office setups in Thika, solar installations, emergency repairs & industrial upgrades. Quality work since 2008." />
   <meta name="keywords" content="electrical projects Kenya, electrical portfolio Nairobi, residential wiring projects, commercial electrical installations Thika, solar power projects Kenya, electrical repair projects, industrial electrical work, electrical contractor portfolio" />
   <meta name="author" content="BlessedSam Electrical Installations" />
