--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <!-- SEO Meta Tags -->
-  <title>Electrical Services Kenya | Residential, Commercial & Emergency | BlessedSam</title>
+  <title>Electrical Services Kenya | BlessedSam</title>
   <meta name="description" content="Professional electrical services in Kenya: residential wiring, commercial installations, emergency repairs, solar power, lighting & safety inspections. Licensed electricians serving Nairobi, Thika & Central Kenya. Free quotes available." />
   <meta name="keywords" content="electrical services Kenya, residential electrical Nairobi, commercial electrical Thika, emergency electrician Kenya, solar installation Kenya, electrical repairs Central Kenya, lighting installation, panel upgrades, electrical safety inspections" />
   <meta name="author" content="BlessedSam Electrical Installations" />
