--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <!-- SEO Meta Tags -->
-  <title>About BlessedSam Electrical | Professional Electricians Since 2008 | Kenya</title>
-  <meta name="description" content="Learn about BlessedSam Electrical Installations - Kenya's trusted electrical service provider since 2008. Meet our certified team of electricians serving Nairobi, Thika & Central Kenya with residential & commercial solutions." />
-  <meta name="keywords" content="about BlessedSam electrical, electrical company Kenya, licensed electricians Nairobi, electrical services Thika, John Excellence electrician, electrical team Kenya, professional electricians Central Kenya" />
+  <title>About BlessedSam | Professional Electrical & Sound System Services Kenya</title>
+  <meta name="description" content="Learn about BlessedSam Electrical Installations - Kenya's trusted electrical and sound system service provider since 2008. Meet our certified team serving Nairobi, Thika & Central Kenya with electrical & audio solutions." />
+  <meta name="keywords" content="about BlessedSam electrical, electrical sound system company Kenya, licensed electricians Nairobi, sound system installation Thika, John Excellence electrician, audio technicians Kenya, professional electrical sound services Central Kenya" />
   <meta name="author" content="BlessedSam Electrical Installations" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://blessedsam-electrical.com/about.html" />
@@ -15,8 +15,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://blessedsam-electrical.com/about.html" />
-  <meta property="og:title" content="About BlessedSam Electrical | Professional Electricians Since 2008 | Kenya" />
-  <meta property="og:description" content="Learn about BlessedSam Electrical Installations - Kenya's trusted electrical service provider since 2008. Meet our certified team of electricians." />
+  <meta property="og:title" content="About BlessedSam Electrical | Professional Electrical & Sound Systems Since 2008 | Kenya" />
+  <meta property="og:description" content="Learn about BlessedSam Electrical Installations - Kenya's trusted electrical and sound system service provider since 2008. Meet our certified team of electricians and audio technicians." />
   <meta property="og:image" content="https://blessedsam-electrical.com/images/electrician.jpeg" />
   <meta property="og:locale" content="en_KE" />
   <meta property="og:site_name" content="BlessedSam Electrical Installations" />
@@ -24,8 +24,8 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://blessedsam-electrical.com/about.html" />
-  <meta property="twitter:title" content="About BlessedSam Electrical | Professional Electricians Since 2008 | Kenya" />
-  <meta property="twitter:description" content="Learn about BlessedSam Electrical Installations - Kenya's trusted electrical service provider since 2008. Meet our certified team of electricians." />
+  <meta property="twitter:title" content="About BlessedSam Electrical | Professional Electrical & Sound Systems Since 2008 | Kenya" />
+  <meta property="twitter:description" content="Learn about BlessedSam Electrical Installations - Kenya's trusted electrical and sound system service provider since 2008. Meet our certified team of electricians and audio technicians." />
   <meta property="twitter:image" content="https://blessedsam-electrical.com/images/electrician.jpeg" />
   
   <!-- Favicons -->
@@ -153,8 +153,8 @@
         <div class="col-lg-6">
           <div class="about-content">
             <h3 class="mb-4">Our Story</h3>
-            <p>Founded in 2008 by master electrician John Excellence, BLESSEDSAM ELECTRICAL has grown from a small local business to one of the region's most trusted electrical service providers. Our commitment to safety, quality, and customer satisfaction has earned us thousands of satisfied customers.</p>
-            <p>We specialize in both residential and commercial electrical work, bringing decades of combined experience to every project. Our team of certified electricians stays current with the latest electrical codes and technologies.</p>
+            <p>Founded in 2008 by master electrician John Excellence, BLESSEDSAM ELECTRICAL has grown from a small local business to one of the region's most trusted electrical and sound system service providers. Our commitment to safety, quality, and customer satisfaction has earned us thousands of satisfied customers across Kenya.</p>
+            <p>We specialize in both residential and commercial electrical work, as well as professional sound system installations and maintenance. Our team brings decades of combined experience to every project, from complex electrical installations to custom audio solutions. Our certified electricians and audio technicians stay current with the latest electrical codes, technologies, and sound system innovations.</p>
           </div>
         </div>
         <div class="col-lg-6 text-center">
@@ -178,7 +178,7 @@
           <div class="service-card h-100">
             <div class="service-icon"><i class="fas fa-bullseye"></i></div>
             <h4>Our Mission</h4>
-            <p>To provide safe, efficient, and cost-effective electrical solutions while building lasting relationships with our customers through trust and excellence.</p>
+            <p>To provide safe, efficient, and cost-effective electrical and sound system solutions while building lasting relationships with our customers through trust and excellence in every project we undertake.</p>
           </div>
         </div>
         <div class="col-md-4 mb-4">
@@ -201,7 +201,7 @@
             <div class="p-4">
               <h4>John Excellence</h4>
               <p class="text-primary">Master Electrician & Founder</p>
-              <p>15+ years of experience in electrical contracting with specialization in commercial and industrial installations.</p>
+              <p>15+ years of experience in electrical contracting and sound system installations, with specialization in commercial, industrial, and professional audio solutions.</p>
             </div>
           </div>
         </div>
@@ -211,7 +211,7 @@
             <div class="p-4">
               <h4>Sarah Johnson</h4>
               <p class="text-primary">Lead Residential Specialist</p>
-              <p>Expert in home electrical systems, smart home technology, and energy-efficient solutions for modern homes.</p>
+              <p>Expert in home electrical systems, smart home technology, residential sound installations, and energy-efficient solutions for modern homes.</p>
             </div>
           </div>
         </div>
@@ -221,7 +221,7 @@
             <div class="p-4">
               <h4>Mike Rodriguez</h4>
               <p class="text-primary">Commercial Projects Manager</p>
-              <p>Specializes in large-scale commercial electrical projects and industrial automation systems.</p>
+              <p>Specializes in large-scale commercial electrical projects, industrial automation systems, and professional sound system installations for businesses and venues.</p>
             </div>
           </div>
         </div>
