--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags -->
-    <title>Electrical Blog | Tips, Safety & Industry News | BlessedSam Electrical Kenya</title>
+  <title>Electrical Blog | BlessedSam Tips & News</title>
     <meta name="description" content="Expert electrical tips, safety guides & industry news from BlessedSam Electrical. Learn about panel upgrades, smart home planning, energy-efficient lighting, electrical safety & more from Kenya's trusted electricians." />
     <meta name="keywords" content="electrical blog Kenya, electrical safety tips, smart home guide, LED lighting, electrical panel upgrades, solar power guide, electrical repairs, emergency electrician tips, energy efficiency, electrical code updates" />
     <meta name="author" content="BlessedSam Electrical Installations" />
