--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <!-- SEO Meta Tags -->
-  <title>Contact BlessedSam Electrical | Get Free Quote | Emergency Service 24/7 Kenya</title>
+  <title>Contact BlessedSam | Free Quote & Emergency Service</title>
   <meta name="description" content="Contact BlessedSam Electrical for professional electrical services in Kenya. Get free quotes, emergency repairs 24/7. Serving Nairobi, Thika & Central Kenya. Call +254 700 123 456 or email blessedsam5320@gmail.com" />
   <meta name="keywords" content="contact electrician Kenya, electrical services Nairobi, emergency electrician Thika, free electrical quote Kenya, electrical contractor contact, 24/7 electrical repairs, electrical installation quotes, BlessedSam electrical contact" />
   <meta name="author" content="BlessedSam Electrical Installations" />
