--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <!-- SEO Meta Tags -->
-  <title>BlessedSam Electrical Installations | Professional Electrical Services in Kenya</title>
-  <meta name="description" content="Professional electrical services in Kenya. Residential, commercial, and emergency electrical repairs. Licensed electricians serving Nairobi, Thika, and surrounding areas. Get free quotes today!" />
-  <meta name="keywords" content="electrical services Kenya, electrician Nairobi, electrical installation, electrical repairs, commercial electrical, residential electrical, emergency electrical, solar installation, panel upgrades, Thika electrician" />
+  <title>BlessedSam Electrical | Electrification & Sound Systems Kenya</title>
+  <meta name="description" content="Expert electrification and sound systems specialists in Kenya. Professional electrical installations, advanced sound system design, and audio solutions for residential and commercial projects in Nairobi, Thika, and Central Kenya." />
+  <meta name="keywords" content="electrification Kenya, sound systems Kenya, audio installation, electrical systems, sound engineering, PA systems, home theater, commercial audio, electrical contractors Nairobi, Thika sound systems" />
   <meta name="author" content="BlessedSam Electrical Installations" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://blessedsam-electrical.com/" />
@@ -15,8 +15,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://blessedsam-electrical.com/" />
-  <meta property="og:title" content="BlessedSam Electrical Installations | Professional Electrical Services in Kenya" />
-  <meta property="og:description" content="Professional electrical services in Kenya. Residential, commercial, and emergency electrical repairs. Licensed electricians serving Nairobi, Thika, and surrounding areas." />
+  <meta property="og:title" content="BlessedSam Electrical | Electrification & Sound Systems Specialists in Kenya" />
+  <meta property="og:description" content="Expert electrification and sound systems specialists in Kenya. Professional electrical installations and advanced sound system solutions for residential and commercial projects." />
   <meta property="og:image" content="https://blessedsam-electrical.com/images/og-image.jpg" />
   <meta property="og:locale" content="en_KE" />
   <meta property="og:site_name" content="BlessedSam Electrical Installations" />
@@ -24,8 +24,8 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://blessedsam-electrical.com/" />
-  <meta property="twitter:title" content="BlessedSam Electrical Installations | Professional Electrical Services in Kenya" />
-  <meta property="twitter:description" content="Professional electrical services in Kenya. Residential, commercial, and emergency electrical repairs. Licensed electricians serving Nairobi, Thika, and surrounding areas." />
+  <meta property="twitter:title" content="BlessedSam Electrical | Electrification & Sound Systems Specialists in Kenya" />
+  <meta property="twitter:description" content="Expert electrification and sound systems specialists in Kenya. Professional electrical installations and advanced sound system solutions for residential and commercial projects." />
   <meta property="twitter:image" content="https://blessedsam-electrical.com/images/og-image.jpg" />
   
   <!-- Favicons -->
@@ -279,8 +279,8 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="hero-content">
-            <h1 class="display-4 fw-bold mb-4">Professional Electrical Services in Kenya</h1>
-            <p class="lead mb-4">Licensed electricians providing residential, commercial, and emergency electrical services across Nairobi, Thika, and Central Kenya. Available 24/7 for all your electrical needs.</p>
+            <h1 class="display-4 fw-bold mb-4">Electrification & Sound Systems Specialists</h1>
+            <p class="lead mb-4">Expert electrical installations and professional sound system solutions across Nairobi, Thika, and Central Kenya. From advanced electrification projects to cutting-edge audio systems - we deliver excellence.</p>
             <div class="hero-buttons">
               <a href="contact.html" class="btn btn-primary-custom me-3">Get Free Quote</a>
               <a href="services.html" class="btn btn-outline-light">Our Services</a>
@@ -300,50 +300,45 @@
   <section class="section-padding">
     <div class="container">
       <div class="section-title text-center">
-        <h2>Our Electrical Services</h2>
-        <p class="lead">Professional electrical solutions for all your needs</p>
+        <h2>Our Core Specialties</h2>
+        <p class="lead">Expert solutions in Electrification and Sound Systems</p>
       </div>
-      <div class="row">
-        <div class="col-lg-4 col-md-6 mb-4">
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-md-6 mb-4">
           <div class="service-card h-100">
-            <div class="service-icon"><i class="fas fa-home"></i></div>
-            <h4>Residential Electrical</h4>
-            <p>Complete home electrical services including wiring, panel upgrades, and smart home integration.</p>
+            <div class="service-icon"><i class="fas fa-bolt"></i></div>
+            <h4>Electrification Systems</h4>
+            <p>Complete electrical infrastructure solutions for residential, commercial, and industrial applications with cutting-edge technology.</p>
             <ul class="list-unstyled mt-3">
-              <li><i class="fas fa-check text-success me-2"></i>Whole house rewiring</li>
-              <li><i class="fas fa-check text-success me-2"></i>Panel upgrades</li>
-              <li><i class="fas fa-check text-success me-2"></i>Smart home systems</li>
+              <li><i class="fas fa-check text-success me-2"></i>Advanced wiring systems</li>
+              <li><i class="fas fa-check text-success me-2"></i>Smart electrical panels</li>
+              <li><i class="fas fa-check text-success me-2"></i>Power distribution networks</li>
+              <li><i class="fas fa-check text-success me-2"></i>Energy management systems</li>
+              <li><i class="fas fa-check text-success me-2"></i>Industrial electrification</li>
             </ul>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
+        <div class="col-lg-5 col-md-6 mb-4">
           <div class="service-card h-100">
-            <div class="service-icon"><i class="fas fa-building"></i></div>
-            <h4>Commercial Electrical</h4>
-            <p>Efficient electrical installations and maintenance for businesses and office buildings.</p>
+            <div class="service-icon"><i class="fas fa-volume-up"></i></div>
+            <h4>Sound Systems</h4>
+            <p>Professional audio solutions including design, installation, and maintenance of high-quality sound systems for any environment.</p>
             <ul class="list-unstyled mt-3">
-              <li><i class="fas fa-check text-success me-2"></i>Office lighting systems</li>
-              <li><i class="fas fa-check text-success me-2"></i>Power distribution</li>
-              <li><i class="fas fa-check text-success me-2"></i>Emergency lighting</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="service-card h-100">
-            <div class="service-icon"><i class="fas fa-exclamation-triangle"></i></div>
-            <h4>Emergency Repairs</h4>
-            <p>24/7 emergency electrical repair services to fix critical problems when they arise.</p>
-            <ul class="list-unstyled mt-3">
-              <li><i class="fas fa-check text-success me-2"></i>Power outage diagnosis</li>
-              <li><i class="fas fa-check text-success me-2"></i>Fire hazard prevention</li>
-              <li><i class="fas fa-check text-success me-2"></i>Same-day service</li>
+              <li><i class="fas fa-check text-success me-2"></i>PA system installation</li>
+              <li><i class="fas fa-check text-success me-2"></i>Home theater systems</li>
+              <li><i class="fas fa-check text-success me-2"></i>Commercial audio setups</li>
+              <li><i class="fas fa-check text-success me-2"></i>Conference room systems</li>
+              <li><i class="fas fa-check text-success me-2"></i>Live event sound engineering</li>
             </ul>
           </div>
         </div>
       </div>
       <div class="text-center mt-4">
-        <a href="services.html" class="btn btn-primary-custom btn-lg">
-          <i class="fas fa-tools me-2"></i>View All Services
+        <a href="services.html" class="btn btn-primary-custom btn-lg me-3">
+          <i class="fas fa-bolt me-2"></i>Electrification Services
+        </a>
+        <a href="services.html" class="btn btn-secondary-custom btn-lg">
+          <i class="fas fa-volume-up me-2"></i>Sound System Solutions
         </a>
       </div>
     </div>
