changed image description

--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
 
               <div class="gallery-overlay">
                 <div class="text-center text-white">
-                  <h3>Commercial Office Setup</h3>
-                  <p class="lead">5-floor corporate office in Thika</p>
+                  <h3>Social Gatherings</h3>
+                  <p class="lead">Professional electrical services for social events</p>
                 </div>
               </div>
             </div>
@@ -383,8 +383,8 @@
 
               <div class="gallery-overlay">
                 <div class="text-center text-white">
-                  <h3>Emergency Repair Service</h3>
-                  <p class="lead">Industrial warehouse power restoration</p>
+                  <h3>Social Events</h3>
+                  <p class="lead">Professional electrical services for social gatherings</p>
                 </div>
               </div>
             </div>
@@ -394,8 +394,8 @@
 
               <div class="gallery-overlay">
                 <div class="text-center text-white">
-                  <h3>Solar Power Installation</h3>
-                  <p class="lead">Off-grid solar system in Murang'a</p>
+                  <h3>Commercial Electrical Installation</h3>
+                  <p class="lead">Professional electrical solutions for businesses</p>
                 </div>
               </div>
             </div>
@@ -405,8 +405,8 @@
             <div class="gallery-slide" style="background-image: url('images/img1.webp');">
               <div class="gallery-overlay">
                 <div class="text-center text-white">
-                  <h3>Residential Wiring Project</h3>
-                  <p class="lead">Modern home electrical installation in Nairobi</p>
+                  <h3>Audio and Power systems</h3>
+                  <p class="lead">Audio and Power systems installation and services.</p>
                 </div>
               </div>
             </div>
@@ -415,8 +415,8 @@
             <div class="gallery-slide" style="background-image: url('images/img2.webp');">
               <div class="gallery-overlay">
                 <div class="text-center text-white">
-                  <h3>Commercial Office Setup</h3>
-                  <p class="lead">5-floor corporate office in Thika</p>
+                  <h3>Social Gatherings</h3>
+                  <p class="lead">Professional electrical services for social events</p>
                 </div>
               </div>
             </div>
@@ -425,8 +425,8 @@
             <div class="gallery-slide" style="background-image: url('images/img3.webp');">
               <div class="gallery-overlay">
                 <div class="text-center text-white">
-                  <h3>Emergency Repair Service</h3>
-                  <p class="lead">Industrial warehouse power restoration</p>
+                  <h3>Social Events Services</h3>
+                  <p class="lead">Social events electrical installation and Maintenance.</p>
                 </div>
               </div>
             </div>
@@ -435,8 +435,8 @@
             <div class="gallery-slide" style="background-image: url('images/img4.webp');">
               <div class="gallery-overlay">
                 <div class="text-center text-white">
-                  <h3>Solar Power Installation</h3>
-                  <p class="lead">Off-grid solar system in Murang'a</p>
+                  <h3>Commercial Electrical Installation</h3>
+                  <p class="lead">Professional electrical solutions for businesses</p>
                 </div>
               </div>
             </div>
@@ -611,7 +611,6 @@
         <div class="col-lg-3 mb-4">
           <h6>Contact Info</h6>
           <p><i class="fas fa-map-marker-alt me-2"></i>P.O. Box 965-01000, THIKA</p>
-          <p><i class="fas fa-phone me-2"></i>+254 700 123 456</p>
           <p><i class="fas fa-envelope me-2"></i>blessedsam5320@gmail.com</p>
           <p><i class="fas fa-clock me-2"></i>24/7 Emergency Service</p>
         </div>
