--- a/index.html
+++ b/index.html
@@ -623,7 +623,23 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js" defer></script>
-    <script src="js/main.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  <script src="js/main.min.js"></script>
+  <script>
+    // Highlight active nav link on page load
+    document.addEventListener('DOMContentLoaded', function() {
+      const currentPage = window.location.pathname.split('/').pop() || 'index.html';
+      document.querySelectorAll('.nav-link').forEach(link => {
+        const linkPage = link.getAttribute('href').split('/').pop();
+        if (currentPage === linkPage || (currentPage === '' && linkPage === 'index.html')) {
+          link.classList.add('active');
+          link.closest('.nav-item')?.classList.add('active');
+        } else {
+          link.classList.remove('active');
+          link.closest('.nav-item')?.classList.remove('active');
+        }
+      });
+    });
+  </script>
 </body>
 </html>
