Add glow hover effect to all cards; update blog with sound system topic

--- a/blog.html
+++ b/blog.html
@@ -271,11 +271,11 @@
                 <div class="col-lg-4 mb-4">
                     <div class="service-card h-100">
                         <div class="card-icon-container gradient-bg-success">
-                            <i class="fas fa-leaf icon-large"></i>
+                            <i class="fas fa-music icon-large"></i>
                         </div>
-                        <h4>Energy-Efficient Lighting Solutions</h4>
+                        <h4>Choosing the Right Sound System for Your Event</h4>
                         <p class="text-muted mb-3">July 5, 2025</p>
-                        <p>Discover how LED lighting and smart controls can significantly reduce your energy costs while improving your home's ambiance.</p>
+                        <p>Explore tips from our experts on selecting and setting up the perfect sound system for weddings, parties, and corporate events to ensure crystal-clear audio and a memorable experience.</p>
                         <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
                     </div>
                 </div>
@@ -298,17 +298,6 @@
                         <h4>When to Call an Emergency Electrician</h4>
                         <p class="text-muted mb-3">June 20, 2025</p>
                         <p>Learn to identify electrical emergencies that require immediate professional attention and how to stay safe until help arrives.</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 mb-4">
-                    <div class="service-card h-100">
-                        <div class="card-icon-container gradient-bg-warning">
-                            <i class="fas fa-solar-panel icon-large"></i>
-                        </div>
-                        <h4>Solar Power: Is It Right for Your Home?</h4>
-                        <p class="text-muted mb-3">June 15, 2025</p>
-                        <p>A comprehensive guide to determining if solar power is a good investment for your property and understanding the installation process.</p>
                         <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
                     </div>
                 </div>
@@ -372,6 +361,7 @@
 
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js" defer></script>
+  <script src="js/main.min.js" defer></script>
   <script>
     // Theme Switching Functionality
     const themeToggle = document.getElementById('themeToggle');
