fixed contact button

--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
         <div class="col-lg-6 mb-4">
           <h4>Contact Us Directly</h4>
 <p class="mb-3">For all inquiries, please use the contact details or click the button below to email us directly via Gmail.</p>
-<a href="https://mail.google.com/mail/?view=cm&fs=1&to=your@email.com" target="_blank" class="btn btn-primary-custom"><i class="fas fa-envelope me-2"></i>Email Us on Gmail</a>
+<a href="https://mail.google.com/mail/?view=cm&fs=1&to=blessedsam5320@gmail.com" target="_blank" class="btn btn-primary-custom"><i class="fas fa-envelope me-2"></i>Email Us on Gmail</a>
         </div>
         <div class="col-lg-6 mb-4">
           <h4>Contact Information</h4>
