Branding, mobile UX, and consistency updates: hero carousel, responsive buttons, navbar mobile close, phone format, and cleanup.

--- a/about.html
+++ b/about.html
@@ -10,23 +10,23 @@
   <meta name="keywords" content="about BlessedSam electrical, electrical sound system company Kenya, licensed electricians Nairobi, sound system installation Thika, John Excellence electrician, audio technicians Kenya, professional electrical sound services Central Kenya" />
   <meta name="author" content="BlessedSam Electrical Installations" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://blessedsam-electrical.com/about.html" />
+  <link rel="canonical" href="https://blessedsam.co.ke/about.html" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://blessedsam-electrical.com/about.html" />
+  <meta property="og:url" content="https://blessedsam.co.ke/about.html" />
   <meta property="og:title" content="About BlessedSam Electrical | Professional Electrical & Sound Systems Since 2008 | Kenya" />
   <meta property="og:description" content="Learn about BlessedSam Electrical Installations - Kenya's trusted electrical and sound system service provider since 2008. Meet our certified team of electricians and audio technicians." />
-  <meta property="og:image" content="https://blessedsam-electrical.com/images/electrician.jpeg" />
+  <meta property="og:image" content="https://blessedsam.co.ke/images/electrician.jpeg" />
   <meta property="og:locale" content="en_KE" />
   <meta property="og:site_name" content="BlessedSam Electrical Installations" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://blessedsam-electrical.com/about.html" />
+  <meta property="twitter:url" content="https://blessedsam.co.ke/about.html" />
   <meta property="twitter:title" content="About BlessedSam Electrical | Professional Electrical & Sound Systems Since 2008 | Kenya" />
   <meta property="twitter:description" content="Learn about BlessedSam Electrical Installations - Kenya's trusted electrical and sound system service provider since 2008. Meet our certified team of electricians and audio technicians." />
-  <meta property="twitter:image" content="https://blessedsam-electrical.com/images/electrician.jpeg" />
+  <meta property="twitter:image" content="https://blessedsam.co.ke/images/electrician.jpeg" />
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
@@ -54,7 +54,7 @@
     "@type": "AboutPage",
     "mainEntity": {
       "@type": "LocalBusiness",
-      "@id": "https://blessedsam-electrical.com/#organization",
+      "@id": "https://blessedsam.co.ke/#organization",
       "name": "BlessedSam Electrical Installations",
       "description": "Professional electrical service provider in Kenya since 2008, specializing in residential, commercial, and emergency electrical installations.",
       "foundingDate": "2008",
@@ -102,7 +102,7 @@
       },
       "telephone": "+254700123456",
       "email": "blessedsam5320@gmail.com",
-      "url": "https://blessedsam-electrical.com",
+      "url": "https://blessedsam.co.ke",
       "areaServed": ["Nairobi", "Thika", "Central Kenya", "Murang'a County"]
     }
   }
@@ -119,7 +119,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="fas fa-bolt me-2"></i>BLESSEDSAM</a>
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+  <img src="images/logo.webp" alt="BlessedSam Profile Logo" style="height:56px;width:56px;object-fit:cover;" class="me-2 rounded-circle">
+  BLESSEDSAM
+</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -154,7 +157,7 @@
         <div class="col-lg-6">
           <div class="about-content">
             <h3 class="mb-4">Our Story</h3>
-            <p>Founded in 2008 by master electrician John Excellence, BLESSEDSAM ELECTRICAL has grown from a small local business to one of the region's most trusted electrical and sound system service providers. Our commitment to safety, quality, and customer satisfaction has earned us thousands of satisfied customers across Kenya.</p>
+            <p>Founded by Samuel Muiru Muguro, BLESSEDSAM ELECTRICAL INSTALLATIONS has grown from a small local business to one of the region's most trusted electrical and sound system service providers. Our commitment to safety, quality, and customer satisfaction has earned us thousands of satisfied customers across Kenya.</p>
             <p>We specialize in both residential and commercial electrical work, as well as professional sound system installations and maintenance. Our team brings decades of combined experience to every project, from complex electrical installations to custom audio solutions. Our certified electricians and audio technicians stay current with the latest electrical codes, technologies, and sound system innovations.</p>
           </div>
         </div>
@@ -200,7 +203,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 mb-4">
-          <h5><i class="fas fa-bolt me-2"></i>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
+          <div class="footer-logo text-center mb-2">
+  <img src="images/logo.webp" alt="BlessedSam Electrical Logo" style="height:80px;width:80px;object-fit:cover;" class="rounded-circle mb-2">
+</div>
+<h5>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
           <p>Your trusted partner for all electrical needs. Licensed, insured, and committed to excellence in every project.</p>
         </div>
         <div class="col-lg-2 col-md-6 mb-4">
@@ -216,6 +222,7 @@
         <div class="col-lg-3 mb-4">
           <h6>Contact Info</h6>
           <p><i class="fas fa-map-marker-alt me-2"></i>P.O. Box 965-01000, THIKA</p>
+          <p><i class="fas fa-phone me-2"></i><a href="tel:+254725827741" class="text-decoration-none">+254 725 827741</a></p>
           <p><i class="fas fa-envelope me-2"></i>blessedsam5320@gmail.com</p>
           <p><i class="fas fa-clock me-2"></i>24/7 Emergency Service</p>
         </div>
