--- a/contact.html
+++ b/contact.html
@@ -10,23 +10,23 @@
   <meta name="keywords" content="contact electrician Kenya, electrical services Nairobi, emergency electrician Thika, free electrical quote Kenya, electrical contractor contact, 24/7 electrical repairs, electrical installation quotes, BlessedSam electrical contact" />
   <meta name="author" content="BlessedSam Electrical Installations" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://blessedsam-electrical.com/contact.html" />
+  <link rel="canonical" href="https://blessedsam.co.ke/contact.html" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://blessedsam-electrical.com/contact.html" />
+  <meta property="og:url" content="https://blessedsam.co.ke/contact.html" />
   <meta property="og:title" content="Contact BlessedSam Electrical | Get Free Quote | Emergency Service 24/7 Kenya" />
   <meta property="og:description" content="Contact BlessedSam Electrical for professional electrical services in Kenya. Get free quotes, emergency repairs 24/7. Serving Nairobi, Thika & Central Kenya." />
-  <meta property="og:image" content="https://blessedsam-electrical.com/images/electrician.jpeg" />
+  <meta property="og:image" content="https://blessedsam.co.ke/images/electrician.jpeg" />
   <meta property="og:locale" content="en_KE" />
   <meta property="og:site_name" content="BlessedSam Electrical Installations" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://blessedsam-electrical.com/contact.html" />
+  <meta property="twitter:url" content="https://blessedsam.co.ke/contact.html" />
   <meta property="twitter:title" content="Contact BlessedSam Electrical | Get Free Quote | Emergency Service 24/7 Kenya" />
   <meta property="twitter:description" content="Contact BlessedSam Electrical for professional electrical services in Kenya. Get free quotes, emergency repairs 24/7. Serving Nairobi, Thika & Central Kenya." />
-  <meta property="twitter:image" content="https://blessedsam-electrical.com/images/electrician.jpeg" />
+  <meta property="twitter:image" content="https://blessedsam.co.ke/images/electrician.jpeg" />
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
@@ -55,7 +55,7 @@
     "@type": "ContactPage",
     "mainEntity": {
       "@type": "LocalBusiness",
-      "@id": "https://blessedsam-electrical.com/#organization",
+      "@id": "https://blessedsam.co.ke/#organization",
       "name": "BlessedSam Electrical Installations",
       "telephone": "+254700123456",
       "email": "blessedsam5320@gmail.com",
@@ -127,7 +127,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="fas fa-bolt me-2"></i>BLESSEDSAM</a>
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+  <img src="images/logo.webp" alt="BlessedSam Profile Logo" style="height:56px;width:56px;object-fit:cover;" class="me-2 rounded-circle">
+  BLESSEDSAM
+</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -176,6 +179,18 @@
               </div>
             </div>
           </div>
+          <!-- Phone Number -->
+          <div class="contact-info-item mb-3">
+            <div class="d-flex align-items-center mb-2">
+              <div class="contact-icon me-3">
+                <i class="fas fa-phone"></i>
+              </div>
+              <div>
+                <h6 class="mb-1">Phone</h6>
+                <p class="mb-0 text-muted"><a href="tel:+254725827741" class="text-decoration-none">+254 725 827741</a></p>
+              </div>
+            </div>
+          </div>
           
 <div class="contact-info-item mb-3">
             <div class="d-flex align-items-center mb-2">
@@ -212,7 +227,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 mb-4">
-          <h5><i class="fas fa-bolt me-2"></i>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
+          <div class="footer-logo text-center mb-2">
+  <img src="images/logo.webp" alt="BlessedSam Electrical Logo" style="height:80px;width:80px;object-fit:cover;" class="rounded-circle mb-2">
+</div>
+<h5>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
           <p>We're always here to help you with your electrical needs — day or night.</p>
         </div>
         <div class="col-lg-2 col-md-6 mb-4">
@@ -227,6 +245,7 @@
         </div>
         <div class="col-lg-3 mb-4">
           <h6>Reach Us</h6>
+          <p><i class="fas fa-phone me-2"></i><a href="tel:+254725827741" class="text-decoration-none">+254 725 827741</a></p>
           <p><i class="fas fa-envelope me-2"></i>blessedsam5320@gmail.com</p>
         </div>
       </div>
