--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   <meta name="keywords" content="electrification Kenya, sound systems Kenya, audio installation, electrical systems, sound engineering, PA systems, home theater, commercial audio, electrical contractors Nairobi, Thika sound systems" />
   <meta name="author" content="BlessedSam Electrical Installations" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://blessedsam-electrical.com/" />
+  <link rel="canonical" href="https://blessedsam.co.ke/" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://blessedsam-electrical.com/" />
+  <meta property="og:url" content="https://blessedsam.co.ke/" />
   <meta property="og:title" content="BlessedSam Electrical | Electrification & Sound Systems Specialists in Kenya" />
   <meta property="og:description" content="Expert electrification and sound systems specialists in Kenya. Professional electrical installations and advanced sound system solutions for residential and commercial projects." />
-  <meta property="og:image" content="https://blessedsam-electrical.com/images/og-image.jpg" />
+  <meta property="og:image" content="https://blessedsam.co.ke/images/og-image.jpg" />
   <meta property="og:locale" content="en_KE" />
   <meta property="og:site_name" content="BlessedSam Electrical Installations" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://blessedsam-electrical.com/" />
+  <meta property="twitter:url" content="https://blessedsam.co.ke/" />
   <meta property="twitter:title" content="BlessedSam Electrical | Electrification & Sound Systems Specialists in Kenya" />
   <meta property="twitter:description" content="Expert electrification and sound systems specialists in Kenya. Professional electrical installations and advanced sound system solutions for residential and commercial projects." />
-  <meta property="twitter:image" content="https://blessedsam-electrical.com/images/og-image.jpg" />
+  <meta property="twitter:image" content="https://blessedsam.co.ke/images/og-image.jpg" />
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
@@ -56,18 +56,18 @@
   {
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
-    "@id": "https://blessedsam-electrical.com/#organization",
+    "@id": "https://blessedsam.co.ke/#organization",
     "name": "BlessedSam Electrical Installations",
     "legalName": "BlessedSam Electrical Installations",
     "alternateName": ["BlessedSam Electrical", "Blessed Sam Electrical"],
     "description": "Professional electrical services in Kenya specializing in residential, commercial, and emergency electrical installations. Licensed electricians serving Nairobi, Thika, and surrounding areas with 24/7 emergency service.",
-    "url": "https://blessedsam-electrical.com",
-    "logo": "https://blessedsam-electrical.com/images/logo.png",
+    "url": "https://blessedsam.co.ke",
+    "logo": "https://blessedsam.co.ke/images/logo.png",
     "image": [
-      "https://blessedsam-electrical.com/images/electric.webp",
-      "https://blessedsam-electrical.com/images/electrician.webp",
-      "https://blessedsam-electrical.com/images/img1.webp",
-      "https://blessedsam-electrical.com/images/img2.webp"
+      "https://blessedsam.co.ke/images/electric.webp",
+      "https://blessedsam.co.ke/images/electrician.webp",
+      "https://blessedsam.co.ke/images/img1.webp",
+      "https://blessedsam.co.ke/images/img2.webp"
     ],
     "telephone": "+254700123456",
     "email": "blessedsam5320@gmail.com",
@@ -251,7 +251,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="fas fa-bolt me-2"></i>BLESSEDSAM</a>
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+  <img src="images/logo.webp" alt="BlessedSam Profile Logo" style="height:56px;width:56px;object-fit:cover;" class="me-2 rounded-circle">
+  BLESSEDSAM
+</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -282,16 +285,33 @@
           <div class="hero-content">
             <h1 class="display-4 fw-bold mb-4">Electrification & Sound Systems Specialists</h1>
             <p class="lead mb-4">Expert electrical installations and professional sound system solutions across Nairobi, Thika, and Central Kenya. From advanced electrification projects to cutting-edge audio systems - we deliver excellence.</p>
-            <div class="hero-buttons">
-              <a href="contact.html" class="btn btn-primary-custom me-3">Get Free Quote</a>
-              <a href="services.html" class="btn btn-outline-light">Our Services</a>
-            </div>
+            <div class="hero-buttons mb-4 mb-lg-0">
+  <a href="contact.html" class="btn btn-primary-custom me-3 mb-3 mb-md-0">Get Free Quote</a>
+  <a href="services.html" class="btn btn-outline-light">Our Services</a>
+</div>
           </div>
         </div>
         <div class="col-lg-6 text-center">
-          <div class="hero-image">
-            <img src="images/electric.webp" alt="Professional electrician working on electrical installation in Kenya" class="img-fluid" />
-          </div>
+          <div class="hero-image mt-3 mt-lg-0">
+  <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/good.webp" class="img-fluid rounded-4 w-100" alt="Professional electrician working on electrical installation in Kenya">
+      </div>
+      <div class="carousel-item">
+        <img src="images/engineer.webp" class="img-fluid rounded-4 w-100" alt="Electrician at work in Kenya">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</div>
         </div>
       </div>
     </div>
@@ -335,12 +355,12 @@
         </div>
       </div>
       <div class="text-center mt-4">
-        <a href="services.html" class="btn btn-primary-custom btn-lg me-3">
-          <i class="fas fa-bolt me-2"></i>Electrification Services
-        </a>
-        <a href="services.html" class="btn btn-secondary-custom btn-lg">
-          <i class="fas fa-volume-up me-2"></i>Sound System Solutions
-        </a>
+        <a href="services.html" class="btn btn-primary-custom btn-lg me-3 mb-3 mb-md-0">
+  <i class="fas fa-bolt me-2"></i>Electrification Services
+</a>
+<a href="services.html" class="btn btn-secondary-custom btn-lg">
+  <i class="fas fa-volume-up me-2"></i>Sound System Solutions
+</a>
       </div>
     </div>
   </section>
@@ -532,7 +552,7 @@
                 </div>
               </div>
               <div>
-                <h6 class="mb-0">Jennifer Smith</h6>
+                <h6 class="mb-0">Jennifer Wangui</h6>
                 <small class="text-muted">Homeowner, Nairobi</small>
               </div>
             </div>
@@ -594,7 +614,10 @@
       <div class="row">
         <!-- About Footer Column -->
         <div class="col-lg-4 mb-4">
-          <h5><i class="fas fa-bolt me-2"></i>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
+          <div class="footer-logo text-center mb-2">
+  <img src="images/logo.webp" alt="BlessedSam Electrical Logo" style="height:80px;width:80px;object-fit:cover;" class="rounded-circle mb-2">
+</div>
+<h5>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
           <p>Your trusted partner for all electrical needs...</p>
         </div>
         <!-- Quick Links Column -->
@@ -612,6 +635,7 @@
         <div class="col-lg-3 mb-4">
           <h6>Contact Info</h6>
           <p><i class="fas fa-map-marker-alt me-2"></i>P.O. Box 965-01000, THIKA</p>
+          <p><i class="fas fa-phone me-2"></i><a href="tel:+254725827741" class="text-decoration-none">+254 725 827741</a></p>
           <p><i class="fas fa-envelope me-2"></i>blessedsam5320@gmail.com</p>
           <p><i class="fas fa-clock me-2"></i>24/7 Emergency Service</p>
         </div>
