--- a/services.html
+++ b/services.html
@@ -10,23 +10,23 @@
   <meta name="keywords" content="electrical services Kenya, residential electrical Nairobi, commercial electrical Thika, emergency electrician Kenya, solar installation Kenya, electrical repairs Central Kenya, lighting installation, panel upgrades, electrical safety inspections" />
   <meta name="author" content="BlessedSam Electrical Installations" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://blessedsam-electrical.com/services.html" />
+  <link rel="canonical" href="https://blessedsam.co.ke/services.html" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://blessedsam-electrical.com/services.html" />
+  <meta property="og:url" content="https://blessedsam.co.ke/services.html" />
   <meta property="og:title" content="Electrical Services Kenya | Residential, Commercial & Emergency | BlessedSam" />
   <meta property="og:description" content="Professional electrical services in Kenya: residential wiring, commercial installations, emergency repairs, solar power, lighting & safety inspections. Licensed electricians serving Nairobi & Thika." />
-  <meta property="og:image" content="https://blessedsam-electrical.com/images/electrician.webp" />
+  <meta property="og:image" content="https://blessedsam.co.ke/images/electrician.webp" />
   <meta property="og:locale" content="en_KE" />
   <meta property="og:site_name" content="BlessedSam Electrical Installations" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://blessedsam-electrical.com/services.html" />
+  <meta property="twitter:url" content="https://blessedsam.co.ke/services.html" />
   <meta property="twitter:title" content="Electrical Services Kenya | Residential, Commercial & Emergency | BlessedSam" />
   <meta property="twitter:description" content="Professional electrical services in Kenya: residential wiring, commercial installations, emergency repairs, solar power, lighting & safety inspections. Licensed electricians serving Nairobi & Thika." />
-  <meta property="twitter:image" content="https://blessedsam-electrical.com/images/electrician.webp" />
+  <meta property="twitter:image" content="https://blessedsam.co.ke/images/electrician.webp" />
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
@@ -55,7 +55,7 @@
     "@type": "Service",
     "provider": {
       "@type": "LocalBusiness",
-      "@id": "https://blessedsam-electrical.com/#organization",
+      "@id": "https://blessedsam.co.ke/#organization",
       "name": "BlessedSam Electrical Installations"
     },
     "serviceType": "Electrical Services",
@@ -135,7 +135,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="fas fa-bolt me-2"></i>BLESSEDSAM</a>
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+  <img src="images/logo.webp" alt="BlessedSam Profile Logo" style="height:56px;width:56px;object-fit:cover;" class="me-2 rounded-circle">
+  BLESSEDSAM
+</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -252,7 +255,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 mb-4">
-          <h5><i class="fas fa-bolt me-2"></i>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
+          <div class="footer-logo text-center mb-2">
+  <img src="images/logo.webp" alt="BlessedSam Electrical Logo" style="height:80px;width:80px;object-fit:cover;" class="rounded-circle mb-2">
+</div>
+<h5>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
           <p>Trusted partner for all your electrical needs. Licensed, insured, and committed to excellence.</p>
         </div>
         <div class="col-lg-2 col-md-6 mb-4">
