--- a/portfolio.html
+++ b/portfolio.html
@@ -10,23 +10,23 @@
   <meta name="keywords" content="electrical projects Kenya, electrical portfolio Nairobi, residential wiring projects, commercial electrical installations Thika, solar power projects Kenya, electrical repair projects, industrial electrical work, electrical contractor portfolio" />
   <meta name="author" content="BlessedSam Electrical Installations" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://blessedsam-electrical.com/portfolio.html" />
+  <link rel="canonical" href="https://blessedsam.co.ke/portfolio.html" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://blessedsam-electrical.com/portfolio.html" />
+  <meta property="og:url" content="https://blessedsam.co.ke/portfolio.html" />
   <meta property="og:title" content="Portfolio | Electrical Projects by BlessedSam | Nairobi, Thika & Central Kenya" />
   <meta property="og:description" content="View our portfolio of completed electrical projects in Kenya: residential wiring, commercial installations, solar projects & emergency repairs. Quality work since 2008." />
-  <meta property="og:image" content="https://blessedsam-electrical.com/images/img1.webp" />
+  <meta property="og:image" content="https://blessedsam.co.ke/images/img1.webp" />
   <meta property="og:locale" content="en_KE" />
   <meta property="og:site_name" content="BlessedSam Electrical Installations" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://blessedsam-electrical.com/portfolio.html" />
+  <meta property="twitter:url" content="https://blessedsam.co.ke/portfolio.html" />
   <meta property="twitter:title" content="Portfolio | Electrical Projects by BlessedSam | Nairobi, Thika & Central Kenya" />
   <meta property="twitter:description" content="View our portfolio of completed electrical projects in Kenya: residential wiring, commercial installations, solar projects & emergency repairs. Quality work since 2008." />
-  <meta property="twitter:image" content="https://blessedsam-electrical.com/images/img1.webp" />
+  <meta property="twitter:image" content="https://blessedsam.co.ke/images/img1.webp" />
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
@@ -57,48 +57,48 @@
     "description": "Portfolio showcasing completed electrical projects by BlessedSam Electrical Installations in Kenya",
     "provider": {
       "@type": "LocalBusiness",
-      "@id": "https://blessedsam-electrical.com/#organization",
+      "@id": "https://blessedsam.co.ke/#organization",
       "name": "BlessedSam Electrical Installations"
     },
     "associatedMedia": [
       {
         "@type": "ImageObject",
-        "url": "https://blessedsam-electrical.com/images/img1.webp",
+        "url": "https://blessedsam.co.ke/images/img1.webp",
         "name": "Modern Residential Wiring Project",
         "description": "Full electrical rewiring for a 4-bedroom home in Nairobi, including LED lighting and smart switches.",
         "contentLocation": "Nairobi, Kenya"
       },
       {
         "@type": "ImageObject",
-        "url": "https://blessedsam-electrical.com/images/img2.webp",
+        "url": "https://blessedsam.co.ke/images/img2.webp",
         "name": "Commercial Office Setup",
         "description": "Power distribution, network cabling, and backup systems for a 5-floor corporate office in Thika.",
         "contentLocation": "Thika, Kenya"
       },
       {
         "@type": "ImageObject",
-        "url": "https://blessedsam-electrical.com/images/img3.webp",
+        "url": "https://blessedsam.co.ke/images/img3.webp",
         "name": "Emergency Repair & Restoration",
         "description": "Emergency power restoration after short-circuit in industrial warehouse within 1 hour response time.",
         "contentLocation": "Central Kenya"
       },
       {
         "@type": "ImageObject",
-        "url": "https://blessedsam-electrical.com/images/img4.webp",
+        "url": "https://blessedsam.co.ke/images/img4.webp",
         "name": "Landscape & Outdoor Lighting",
         "description": "Custom garden and security lighting installation with timers and motion sensors.",
         "contentLocation": "Nairobi, Kenya"
       },
       {
         "@type": "ImageObject",
-        "url": "https://blessedsam-electrical.com/images/img5.webp",
+        "url": "https://blessedsam.co.ke/images/img5.webp",
         "name": "Solar Power Integration",
         "description": "Off-grid solar installation with battery backup for remote farm house in Murang'a County.",
         "contentLocation": "Murang'a County, Kenya"
       },
       {
         "@type": "ImageObject",
-        "url": "https://blessedsam-electrical.com/images/electrician.webp",
+        "url": "https://blessedsam.co.ke/images/electrician.webp",
         "name": "Industrial Panel Upgrade",
         "description": "Main distribution board upgrade for manufacturing plant to support increased load capacity.",
         "contentLocation": "Central Kenya"
@@ -118,7 +118,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><i class="fas fa-bolt me-2"></i>BLESSEDSAM</a>
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+  <img src="images/logo.webp" alt="BlessedSam Profile Logo" style="height:56px;width:56px;object-fit:cover;" class="me-2 rounded-circle">
+  BLESSEDSAM
+</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -155,8 +158,8 @@
           <div class="card h-100 shadow-sm">
 <img src="images/img1.webp" class="card-img-top" alt="Residential Wiring Project">
             <div class="card-body">
-              <h5 class="card-title">Modern Residential Wiring</h5>
-              <p class="card-text">Full electrical rewiring for a 4-bedroom home in Nairobi, including LED lighting and smart switches.</p>
+              <h5 class="card-title">Residential Wiring Project</h5>
+<p class="card-text">Modern home electrical installation in Nairobi.</p>
             </div>
           </div>
         </div>
@@ -166,8 +169,8 @@
           <div class="card h-100 shadow-sm">
 <img src="images/img2.webp" class="card-img-top" alt="Office Installation">
             <div class="card-body">
-              <h5 class="card-title">Commercial Office Setup</h5>
-              <p class="card-text">Power distribution, network cabling, and backup systems for a 5-floor corporate office in Thika.</p>
+              <h5 class="card-title">Commercial Electrical Installation</h5>
+<p class="card-text">Professional electrical solutions for businesses.</p>
             </div>
           </div>
         </div>
@@ -177,8 +180,8 @@
           <div class="card h-100 shadow-sm">
 <img src="images/img3.webp" class="card-img-top" alt="Emergency Repair">
             <div class="card-body">
-              <h5 class="card-title">Emergency Repair & Restoration</h5>
-              <p class="card-text">Responded within 1 hour to restore power after a short-circuit in an industrial warehouse.</p>
+              <h5 class="card-title">Social Events Services</h5>
+<p class="card-text">Social events electrical installation and Maintenance.</p>
             </div>
           </div>
         </div>
@@ -186,10 +189,10 @@
         <!-- Project 4 -->
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100 shadow-sm">
-<img src="images/img4.webp" class="card-img-top" alt="Outdoor Lighting">
+<img src="images/img5.webp" class="card-img-top" alt="Social Gatherings">
             <div class="card-body">
-              <h5 class="card-title">Landscape & Outdoor Lighting</h5>
-              <p class="card-text">Custom lighting for garden and security including timers and motion sensors.</p>
+              <h5 class="card-title">Audio and Power Systems</h5>
+<p class="card-text">Audio and Power systems installation and services.</p>
             </div>
           </div>
         </div>
@@ -197,10 +200,10 @@
         <!-- Project 5 -->
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100 shadow-sm">
-<img src="images/img5.webp" class="card-img-top" alt="Solar Power System">
+<img src="images/img4.webp" class="card-img-top" alt="Audio and Power Systems">
             <div class="card-body">
-              <h5 class="card-title">Solar Power Integration</h5>
-              <p class="card-text">Solar installation with battery backup for a remote farm house off-grid in Murang'a County.</p>
+              <h5 class="card-title">Social Gatherings</h5>
+<p class="card-text">Professional electrical services for social events.</p>
             </div>
           </div>
         </div>
@@ -211,7 +214,7 @@
 <img src="images/electrician.webp" class="card-img-top" alt="Factory Panel Upgrade">
             <div class="card-body">
               <h5 class="card-title">Industrial Panel Upgrade</h5>
-              <p class="card-text">Upgrade of main distribution board for a manufacturing plant to support increased load capacity.</p>
+<p class="card-text">Main distribution board upgrade for manufacturing plant to support increased load capacity.</p>
             </div>
           </div>
         </div>
@@ -224,7 +227,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 mb-4">
-          <h5><i class="fas fa-bolt me-2"></i>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
+          <div class="footer-logo text-center mb-2">
+  <img src="images/logo.webp" alt="BlessedSam Electrical Logo" style="height:80px;width:80px;object-fit:cover;" class="rounded-circle mb-2">
+</div>
+<h5>BLESSEDSAM ELECTRICAL INSTALLATIONS</h5>
           <p>Reliable electrical solutions for homes, businesses, and industries. Powered by trust and excellence.</p>
         </div>
         <div class="col-lg-2 col-md-6 mb-4">
@@ -240,6 +246,7 @@
         <div class="col-lg-3 mb-4">
           <h6>Contact Info</h6>
           <p><i class="fas fa-map-marker-alt me-2"></i>P.O. Box 965-01000, THIKA</p>
+          <p><i class="fas fa-phone me-2"></i><a href="tel:+254725827741" class="text-decoration-none">+254 725 827741</a></p>
           <p><i class="fas fa-envelope me-2"></i>blessedsam5320@gmail.com</p>
           <p><i class="fas fa-clock me-2"></i>24/7 Emergency Service</p>
         </div>
