--- a/portfolio.html
+++ b/portfolio.html
@@ -158,8 +158,8 @@
           <div class="card h-100 shadow-sm">
 <img src="images/img1.webp" class="card-img-top" alt="Residential Wiring Project">
             <div class="card-body">
-              <h5 class="card-title">Residential Wiring Project</h5>
-<p class="card-text">Modern home electrical installation in Nairobi.</p>
+              <h5 class="card-title">Sound system Setup and Power Backup Installation</h5>
+<p class="card-text">Complete audio setup with mixer, speaker and backup power installation.</p>
             </div>
           </div>
         </div>
@@ -169,8 +169,8 @@
           <div class="card h-100 shadow-sm">
 <img src="images/img2.webp" class="card-img-top" alt="Office Installation">
             <div class="card-body">
-              <h5 class="card-title">Commercial Electrical Installation</h5>
-<p class="card-text">Professional electrical solutions for businesses.</p>
+              <h5 class="card-title">Live event Power and Sound Setup.</h5>
+<p class="card-text">Professional electrical wiring and sound system configuration for outdoor events.</p>
             </div>
           </div>
         </div>
