--- a/index.html
+++ b/index.html
@@ -293,24 +293,7 @@
         </div>
         <div class="col-lg-6 text-center">
           <div class="hero-image mt-3 mt-lg-0">
-  <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3500">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/good.webp" class="img-fluid rounded-4 w-100" alt="Professional electrician working on electrical installation in Kenya">
-      </div>
-      <div class="carousel-item">
-        <img src="images/engineer.webp" class="img-fluid rounded-4 w-100" alt="Electrician at work in Kenya">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+  <img src="images/engineer.webp" class="img-fluid rounded-4 w-100" alt="Professional electrician working on electrical installation in Kenya">
 </div>
         </div>
       </div>
