--- a/index.html
+++ b/index.html
@@ -500,10 +500,10 @@
         </div>
       </div>
       <div class="text-center mt-5">
-        <a href="about.html" class="btn btn-secondary-custom btn-lg me-3">
+        <a href="about.html" class="btn btn-secondary-custom btn-lg me-3 action-btn-responsive">
           <i class="fas fa-users me-2"></i>Learn About Us
         </a>
-        <a href="blog.html" class="btn btn-outline-secondary btn-lg">
+        <a href="blog.html" class="btn btn-outline-secondary btn-lg action-btn-responsive">
           <i class="fas fa-newspaper me-2"></i>Read Our Blog
         </a>
       </div>
